# tempo-mapper

./: .gitignore  LICENSE  README.md  pyproject.toml
src/tempo_mapper/: __init__.py  audio.py  cli.py  plot.py  report.py  segments.py  tempo.py
tests/: synth.py  test_segments.py  test_tempo.py
