[project]
name = "tempo-mapper"
version = "0.1.0"
description = "Automatic BPM and tempo-change detection for rhythm-game songs"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "librosa>=0.11",
    "numpy>=1.26",
    "scipy>=1.11",
    "matplotlib>=3.8",
    "soundfile>=0.12",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
tempo-map = "tempo_mapper.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
